--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "jwtexpress",
+  "name": "node-js-express-login-example",
   "version": "1.0.0",
-  "description": "",
+  "description": "Node.js Express Login and Registration example",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/metaorior/jwtexpress.git"
-  },
-  "author": "syn",
+  "keywords": [
+    "node.js",
+    "express",
+    "jwt",
+    "login",
+    "registration",
+    "rest api",
+    "authentication",
+    "authorization",
+    "mysql"
+  ],
+  "author": "bezkoder",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/metaorior/jwtexpress/issues"
-  },
-  "homepage": "https://github.com/metaorior/jwtexpress#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.1",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
-    "express": "^4.17.2",
+    "express": "^4.17.1",
+    "express-handlebars": "^6.0.2",
+    "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3",
-    "nodemon": "^2.0.15",
-    "sequelize": "^6.14.1"
+    "mysql2": "^2.1.0",
+    "path": "^0.12.7",
+    "sequelize": "^6.11.0"
   }
 }
